# Specter-

./: .gitignore  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements.txt  scope.example.yaml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: BENCHMARK.md  Specter-Live-Demo-Skript.md  datenschutz.html  demo.html  impressum.html  index.html
examples/: build_acquisition_plan.py  build_handbook.py  build_landing.py  build_offer.py  build_outreach_email.py  build_pitch_onepager.py  build_sample_report.py  build_trust_onepager.py  demo_scope.yaml  live_email_check.py  live_web_check.py  run_demo.py  self_audit.py  self_audit_scope.yaml
social-media/: CONTENT-PLAN.md  README.md
specter/: __init__.py  _brand_asset.py  acquisition.py  agent.py  assets.py  attack_paths.py  audit.py  aws_raw.py  bsi.py  choke_points.py  config.py  container_live.py  cvss.py  db_live.py  dns_live.py  email_live.py  findings.py  handbook.py  landing.py  llm.py  offer.py  outreach.py  remediation.py  report.py  report_export.py  retest.py  safety.py  state.py  trust.py  web_live.py
tests/: conftest.py  test_acquisition.py  test_agent.py  test_analyzers.py  test_analyzers_property.py  test_assets.py  test_attack_paths.py  test_audit.py  test_aws_raw.py  test_benchmark.py  test_bsi.py  test_choke_points.py  test_config.py  test_container_live.py  test_cvss.py  test_db_live.py  test_dirty_exports.py  test_dns_live.py  test_edge_cases.py  test_email_live.py  test_findings.py  test_github_pr.py  test_handbook.py  test_hard_adversarial.py  test_integration.py  test_landing.py  test_llm.py  test_mittelstand_scenario.py  test_new_tools.py  test_offer.py  test_outreach.py  test_remediation.py  test_report_export.py  test_report_injection.py  test_report_sections.py  test_retest.py  test_safety.py  test_safety_adversarial.py  test_scan_patterns.py  test_scanners.py  (+5 more)
(+88 files in other folders)
