# Specter — proprietäre, defensive Sicherheitsprüfung.
# Copyright © 2026 Belkis Aslani. Alle Rechte vorbehalten. Kein Open Source.
# Siehe LICENSE.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specter-security"
version = "1.0.0"
description = "Defensive, scope-gebundene Sicherheitsprüfung für den Mittelstand — offline, deterministisch, nachprüfbar."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — Copyright © 2026 Belkis Aslani. All rights reserved." }
authors = [{ name = "Belkis Aslani", email = "belkis.aslani@gmail.com" }]
keywords = ["security", "defensive", "audit", "offline", "bsi", "mittelstand"]
classifiers = [
    "Private :: Do Not Upload",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
    "Natural Language :: German",
]

# Der Offline-Kern (Analyzer, Report, Scope-Policy) läuft OHNE KI-Abhängigkeit.
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# KI-gesteuerter, autonomer Lauf (nur mit API-Key): `pip install .[ai]`
ai = ["anthropic>=0.40.0"]
# Entwicklung/Tests inkl. echter Testzertifikate für die Labor-Harnesse.
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100", "cryptography>=41.0"]

[project.urls]
Homepage = "https://beko2210.github.io/Specter-/"
Repository = "https://github.com/BEKO2210/Specter-"

[project.scripts]
specter = "main:main"

[tool.setuptools]
# Der CLI-Einstiegspunkt liegt als Top-Level-Modul vor (main.py).
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["specter*"]
exclude = ["tests*", "examples*", "docs*"]
